Fix: Category wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -237,5 +237,7 @@ select {
 @media(min-width: 750px) {
     #category-list {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
